gen/com/kgb/lisp/parser/LispParser.java
// This is a generated file. Not intended for manual editing.
package com.kgb.lisp.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.kgb.lisp.psi.LispTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LispParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ARG) {
      r = arg(b, 0);
    }
    else if (t == BASE_FUNCTION) {
      r = base_function(b, 0);
    }
    else if (t == BASE_FUNCTION_FORM) {
      r = base_function_form(b, 0);
    }
    else if (t == BASIC_TYPE) {
      r = basic_type(b, 0);
    }
    else if (t == BLOCK_BODY) {
      r = block_body(b, 0);
    }
    else if (t == BOOLEAN_VALUE) {
      r = boolean_value(b, 0);
    }
    else if (t == CALL_FUNC) {
      r = call_func(b, 0);
    }
    else if (t == COLLECT_BLOCK) {
      r = collect_block(b, 0);
    }
    else if (t == CONDITIONS) {
      r = conditions(b, 0);
    }
    else if (t == DECLARATION) {
      r = declaration(b, 0);
    }
    else if (t == DEF_STRUCTURE) {
      r = def_structure(b, 0);
    }
    else if (t == DEFUN_BLOCK) {
      r = defun_block(b, 0);
    }
    else if (t == DEFUN_VAR) {
      r = defun_var(b, 0);
    }
    else if (t == DEFVAR_BLOCK) {
      r = defvar_block(b, 0);
    }
    else if (t == DO_BLOCK) {
      r = do_block(b, 0);
    }
    else if (t == DOCUMENTATION) {
      r = documentation(b, 0);
    }
    else if (t == DOLIST_ARG) {
      r = dolist_arg(b, 0);
    }
    else if (t == DOLIST_BLOCK) {
      r = dolist_block(b, 0);
    }
    else if (t == ELSE_BLOCK) {
      r = else_block(b, 0);
    }
    else if (t == EMPTY_BLOCK) {
      r = empty_block(b, 0);
    }
    else if (t == FILE_PATH) {
      r = file_path(b, 0);
    }
    else if (t == FORM_BODY) {
      r = form_body(b, 0);
    }
    else if (t == FUNC_NAME) {
      r = func_name(b, 0);
    }
    else if (t == GETF_ARG) {
      r = getf_arg(b, 0);
    }
    else if (t == GETF_BLOCK) {
      r = getf_block(b, 0);
    }
    else if (t == GETF_VAR) {
      r = getf_var(b, 0);
    }
    else if (t == IF_BLOCK) {
      r = if_block(b, 0);
    }
    else if (t == IF_BODY) {
      r = if_body(b, 0);
    }
    else if (t == IF_FORM) {
      r = if_form(b, 0);
    }
    else if (t == INT_VAL) {
      r = int_val(b, 0);
    }
    else if (t == KEYWORDS) {
      r = keywords(b, 0);
    }
    else if (t == LET_BLOCK) {
      r = let_block(b, 0);
    }
    else if (t == LET_BODY) {
      r = let_body(b, 0);
    }
    else if (t == LET_VAR_BLOCK) {
      r = let_var_block(b, 0);
    }
    else if (t == LIST_BLOCK) {
      r = list_block(b, 0);
    }
    else if (t == LIST_DEF) {
      r = list_def(b, 0);
    }
    else if (t == LOAD_BLOCK) {
      r = load_block(b, 0);
    }
    else if (t == LOOP_BLOCK) {
      r = loop_block(b, 0);
    }
    else if (t == LOOP_FOR_BLOCK) {
      r = loop_for_block(b, 0);
    }
    else if (t == LOOP_FOR_FROM_BLOCK) {
      r = loop_for_from_block(b, 0);
    }
    else if (t == LOOP_FOR_IN_BLOCK) {
      r = loop_for_in_block(b, 0);
    }
    else if (t == MAKE_DEF) {
      r = make_def(b, 0);
    }
    else if (t == MAKE_VALUES) {
      r = make_values(b, 0);
    }
    else if (t == MAKE_VARIANT) {
      r = make_variant(b, 0);
    }
    else if (t == OPERATION) {
      r = operation(b, 0);
    }
    else if (t == OPERATION_FORM) {
      r = operation_form(b, 0);
    }
    else if (t == PUSH_BLOCK) {
      r = push_block(b, 0);
    }
    else if (t == SETQ_ARGS) {
      r = setq_args(b, 0);
    }
    else if (t == SETQ_BLOCK) {
      r = setq_block(b, 0);
    }
    else if (t == SLOT_DESCRIPTION) {
      r = slot_description(b, 0);
    }
    else if (t == SLOT_NAME) {
      r = slot_name(b, 0);
    }
    else if (t == SLOT_OPTION) {
      r = slot_option(b, 0);
    }
    else if (t == SPECIAL_FORM) {
      r = special_form(b, 0);
    }
    else if (t == STRING_ARG) {
      r = string_arg(b, 0);
    }
    else if (t == STRING_VALUE) {
      r = string_value(b, 0);
    }
    else if (t == STRUCT_NAME) {
      r = struct_name(b, 0);
    }
    else if (t == STRUCT_NAME_AND_OPTIONS) {
      r = struct_name_and_options(b, 0);
    }
    else if (t == STRUCT_OPTION) {
      r = struct_option(b, 0);
    }
    else if (t == VAR) {
      r = var(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // var | string_value | make_def | call_func | basic_type | hash_symbol | special_form | object_field
  public static boolean arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG, "<arg>");
    r = var(b, l + 1);
    if (!r) r = string_value(b, l + 1);
    if (!r) r = make_def(b, l + 1);
    if (!r) r = call_func(b, l + 1);
    if (!r) r = basic_type(b, l + 1);
    if (!r) r = consumeToken(b, HASH_SYMBOL);
    if (!r) r = special_form(b, l + 1);
    if (!r) r = consumeToken(b, OBJECT_FIELD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // write | print | operation | car | cdr | cons | read | list | getf | format
  public static boolean base_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_function")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_FUNCTION, "<base function>");
    r = consumeToken(b, WRITE);
    if (!r) r = consumeToken(b, PRINT);
    if (!r) r = operation(b, l + 1);
    if (!r) r = consumeToken(b, CAR);
    if (!r) r = consumeToken(b, CDR);
    if (!r) r = consumeToken(b, CONS);
    if (!r) r = consumeToken(b, READ);
    if (!r) r = consumeToken(b, LIST);
    if (!r) r = consumeToken(b, GETF);
    if (!r) r = consumeToken(b, FORMAT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LP SPACE* base_function SPACE* arg* SPACE* RP
  public static boolean base_function_form(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_function_form")) return false;
    if (!nextTokenIs(b, LP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && base_function_form_1(b, l + 1);
    r = r && base_function(b, l + 1);
    r = r && base_function_form_3(b, l + 1);
    r = r && base_function_form_4(b, l + 1);
    r = r && base_function_form_5(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, BASE_FUNCTION_FORM, r);
    return r;
  }

  // SPACE*
  private static boolean base_function_form_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_function_form_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "base_function_form_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean base_function_form_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_function_form_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "base_function_form_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // arg*
  private static boolean base_function_form_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_function_form_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arg(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "base_function_form_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean base_function_form_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_function_form_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "base_function_form_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // number | string | boolean_value | NULL | string_value | list_def | hash_symbol
  public static boolean basic_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "basic_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASIC_TYPE, "<basic type>");
    r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = boolean_value(b, l + 1);
    if (!r) r = consumeToken(b, NULL);
    if (!r) r = string_value(b, l + 1);
    if (!r) r = list_def(b, l + 1);
    if (!r) r = consumeToken(b, HASH_SYMBOL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defun_block | special_form | call_func | empty_block | if_form | def_structure | make_def
  //             | symbol | basic_type
  public static boolean block_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_BODY, "<block body>");
    r = defun_block(b, l + 1);
    if (!r) r = special_form(b, l + 1);
    if (!r) r = call_func(b, l + 1);
    if (!r) r = empty_block(b, l + 1);
    if (!r) r = if_form(b, l + 1);
    if (!r) r = def_structure(b, l + 1);
    if (!r) r = make_def(b, l + 1);
    if (!r) r = consumeToken(b, SYMBOL);
    if (!r) r = basic_type(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LP SPACE* lambda_list_keyword? SPACE* lambda_field SPACE* RP
  static boolean boa_lambda_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boa_lambda_list")) return false;
    if (!nextTokenIs(b, LP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && boa_lambda_list_1(b, l + 1);
    r = r && boa_lambda_list_2(b, l + 1);
    r = r && boa_lambda_list_3(b, l + 1);
    r = r && lambda_field(b, l + 1);
    r = r && boa_lambda_list_5(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean boa_lambda_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boa_lambda_list_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "boa_lambda_list_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // lambda_list_keyword?
  private static boolean boa_lambda_list_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boa_lambda_list_2")) return false;
    lambda_list_keyword(b, l + 1);
    return true;
  }

  // SPACE*
  private static boolean boa_lambda_list_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boa_lambda_list_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "boa_lambda_list_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean boa_lambda_list_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boa_lambda_list_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "boa_lambda_list_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean boolean_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_value")) return false;
    if (!nextTokenIs(b, "<boolean value>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_VALUE, "<boolean value>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LP SPACE* func_name SPACE* arg* SPACE* RP
  public static boolean call_func(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_func")) return false;
    if (!nextTokenIs(b, LP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CALL_FUNC, null);
    r = consumeToken(b, LP);
    r = r && call_func_1(b, l + 1);
    r = r && func_name(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, call_func_3(b, l + 1));
    r = p && report_error_(b, call_func_4(b, l + 1)) && r;
    r = p && report_error_(b, call_func_5(b, l + 1)) && r;
    r = p && consumeToken(b, RP) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SPACE*
  private static boolean call_func_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_func_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "call_func_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean call_func_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_func_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "call_func_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // arg*
  private static boolean call_func_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_func_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arg(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "call_func_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean call_func_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_func_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "call_func_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // COLLECT SPACE* (form_body | arg)
  public static boolean collect_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collect_block")) return false;
    if (!nextTokenIs(b, COLLECT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLLECT);
    r = r && collect_block_1(b, l + 1);
    r = r && collect_block_2(b, l + 1);
    exit_section_(b, m, COLLECT_BLOCK, r);
    return r;
  }

  // SPACE*
  private static boolean collect_block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collect_block_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "collect_block_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // form_body | arg
  private static boolean collect_block_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collect_block_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = form_body(b, l + 1);
    if (!r) r = arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // conc_name_key | (LP SPACE* conc_name_key SPACE* RP) | (LP SPACE* conc_name_key SPACE* conc_name_value SPACE*RP)
  static boolean conc_name_option(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option")) return false;
    if (!nextTokenIs(b, "", LP, CONC_NAME_KEY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONC_NAME_KEY);
    if (!r) r = conc_name_option_1(b, l + 1);
    if (!r) r = conc_name_option_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LP SPACE* conc_name_key SPACE* RP
  private static boolean conc_name_option_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && conc_name_option_1_1(b, l + 1);
    r = r && consumeToken(b, CONC_NAME_KEY);
    r = r && conc_name_option_1_3(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean conc_name_option_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_1_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conc_name_option_1_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean conc_name_option_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_1_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conc_name_option_1_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // LP SPACE* conc_name_key SPACE* conc_name_value SPACE*RP
  private static boolean conc_name_option_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && conc_name_option_2_1(b, l + 1);
    r = r && consumeToken(b, CONC_NAME_KEY);
    r = r && conc_name_option_2_3(b, l + 1);
    r = r && conc_name_value(b, l + 1);
    r = r && conc_name_option_2_5(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean conc_name_option_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_2_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conc_name_option_2_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean conc_name_option_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_2_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conc_name_option_2_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean conc_name_option_2_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conc_name_option_2_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conc_name_option_2_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // symbol
  static boolean conc_name_value(PsiBuilder b, int l) {
    return consumeToken(b, SYMBOL);
  }

  /* ********************************************************** */
  // (LP SPACE* IF_NULL SPACE* var SPACE* RP) | operation_form | var
  public static boolean conditions(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONS, "<conditions>");
    r = conditions_0(b, l + 1);
    if (!r) r = operation_form(b, l + 1);
    if (!r) r = var(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LP SPACE* IF_NULL SPACE* var SPACE* RP
  private static boolean conditions_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && conditions_0_1(b, l + 1);
    r = r && consumeToken(b, IF_NULL);
    r = r && conditions_0_3(b, l + 1);
    r = r && var(b, l + 1);
    r = r && conditions_0_5(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean conditions_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conditions_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean conditions_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_0_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conditions_0_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean conditions_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditions_0_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "conditions_0_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // boa_lambda_list
  static boolean constructor_arglist(PsiBuilder b, int l) {
    return boa_lambda_list(b, l + 1);
  }

  /* ********************************************************** */
  // symbol
  static boolean constructor_name(PsiBuilder b, int l) {
    return consumeToken(b, SYMBOL);
  }

  /* ********************************************************** */
  // constructor_key | (LP SPACE* constructor_key SPACE* RP)
  //                             | (LP SPACE* constructor_key SPACE* constructor_name SPACE* RP)
  //                             | (LP SPACE* constructor_key SPACE* constructor_name SPACE* constructor_arglist SPACE* RP)
  static boolean constructor_option(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option")) return false;
    if (!nextTokenIs(b, "", LP, CONSTRUCTOR_KEY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONSTRUCTOR_KEY);
    if (!r) r = constructor_option_1(b, l + 1);
    if (!r) r = constructor_option_2(b, l + 1);
    if (!r) r = constructor_option_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LP SPACE* constructor_key SPACE* RP
  private static boolean constructor_option_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && constructor_option_1_1(b, l + 1);
    r = r && consumeToken(b, CONSTRUCTOR_KEY);
    r = r && constructor_option_1_3(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean constructor_option_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_1_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "constructor_option_1_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean constructor_option_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_1_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "constructor_option_1_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // LP SPACE* constructor_key SPACE* constructor_name SPACE* RP
  private static boolean constructor_option_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && constructor_option_2_1(b, l + 1);
    r = r && consumeToken(b, CONSTRUCTOR_KEY);
    r = r && constructor_option_2_3(b, l + 1);
    r = r && constructor_name(b, l + 1);
    r = r && constructor_option_2_5(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean constructor_option_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_2_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "constructor_option_2_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean constructor_option_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_2_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "constructor_option_2_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // SPACE*
  private static boolean constructor_option_2_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_2_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "constructor_option_2_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // LP SPACE* constructor_key SPACE* constructor_name SPACE* constructor_arglist SPACE* RP
  private static boolean constructor_option_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LP);
    r = r && constructor_option_3_1(b, l + 1);
    r = r && consumeToken(b, CONSTRUCTOR_KEY);
    r = r && constructor_option_3_3(b, l + 1);
    r = r && constructor_name(b, l + 1);
    r = r && constructor_option_3_5(b, l + 1);
    r = r && constructor_arglist(b, l + 1);
    r = r && constructor_option_3_7(b, l + 1);
    r = r && consumeToken(b, RP);
    exit_section_(b, m, null, r);
    return r;
  }

  // SPACE*
  private static boolean constructor_option_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_option_3_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, SPACE)) break;
      if (!empty_element_parsed_guard_(b, "constructor_option_3_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }
